Figuring out all the good bits of the EasyGiantsFoundry plugin :)

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Tick Perfect Giant's Foundry
+author=GameDevSam
+description=Reach peak efficiency in the giant's foundry with this plugin
+tags=smithing,skilling,minigame
+plugins=com.gamedevsam.tickperfectgiantsfoundry.TickPerfectGiantsFoundryPlugin
